Fix Styling to Comments on Smaller Screens
User's profile name is displayed instead of their
account username.

--- a/client/src/styles/post.css
+++ b/client/src/styles/post.css
@@ -88,3 +88,9 @@
     cursor: pointer;
 }
 
+@media screen and (max-width: 900px) {
+    .comment {
+        flex-direction: column;
+    }
+}
+
